test-suite/tests/ui/states/duplicate_assert.stderr
error: state is already asserted
 --> tests/ui/states/duplicate_assert.rs:8:24
  |
8 |     #[stated(assert(A, A))]
  |                        ^
